fix linking issues in the test suite (json_validation)

--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -1,19 +1,41 @@
 # Configuration for ScopeMux Bindings C Tests
 # C/C++ standards are set in the root CMakeLists.txt
 
+# ============================================================================
+# IMPORTANT TEST LINKING PATTERN
+# ============================================================================
+# This build system uses a specific pattern to avoid duplicate symbol errors:
+# 
+# 1. Common test utilities (json_validation.c, test_helpers.c, etc.) are compiled
+#    into a single 'test_utilities' static library.
+#
+# 2. Individual test executables LINK to test_utilities rather than directly
+#    including these source files.
+#
+# 3. Source files should NEVER be included in target_link_libraries commands.
+#    This previously caused duplicate symbol errors where json_validation.c was
+#    being linked twice.
+#
+# 4. The SCOPEMUX_CORE_C_SOURCES_FOR_TESTS variable should not contain any
+#    source files that are already part of the test_utilities library.
+# ============================================================================
+
 # Find PkgConfig for locating Criterion via .pc file
 find_package(PkgConfig REQUIRED)
 # Use pkg-config to find Criterion
 pkg_check_modules(Criterion REQUIRED criterion)
 
-# Include directories
+# Set include directories for all targets in this directory
 include_directories(
     # Project directories
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/../include
-    ${CMAKE_CURRENT_SOURCE_DIR}/../include/scopemux
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/utilities
+
+    # Core include directories - the main one contains the scopemux/ directory
+    ${PROJECT_SOURCE_DIR}/core/include
+
     # Tree-sitter include directories (from root CMakeLists.txt)
     ${TS_CORE_INCLUDE_DIR}
     ${TS_C_INCLUDE_DIR}
@@ -21,17 +43,31 @@ include_directories(
     ${TS_PYTHON_INCLUDE_DIR}
     ${TS_JS_INCLUDE_DIR}
     ${TS_TS_INCLUDE_DIR}
+
     # Criterion
     ${Criterion_INCLUDE_DIRS}
 )
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
+# Removed duplicate include_directories line
 
 # --- Test Utilities and Common Test Helpers ---
-set(TEST_UTIL_SOURCES
+# IMPORTANT: This static library pattern prevents duplicate symbol errors
+# Files included here (especially json_validation.c) should NOT be:
+# 1. Added to individual test executable source lists
+# 2. Directly linked via target_link_libraries
+# 3. Included in SCOPEMUX_CORE_C_SOURCES_FOR_TESTS variable
+#
+# Instead, all test targets should link against this library using target_link_libraries
+add_library(test_utilities STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/utilities/test_utils.c
     ${CMAKE_CURRENT_SOURCE_DIR}/utilities/tree_sitter_test_util.c
     ${CMAKE_CURRENT_SOURCE_DIR}/src/common/test_helpers.c
     ${CMAKE_CURRENT_SOURCE_DIR}/src/common/json_validation.c
+)
+target_include_directories(test_utilities PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${Criterion_INCLUDE_DIRS}
 )
 
 # --- Criterion Test Executable ---
@@ -108,69 +144,123 @@ set(INIT_PARSER_TEST_SOURCES
 # Define executables
 add_executable(init_parser_tests
     ${INIT_PARSER_TEST_SOURCES}
-    ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_link_libraries(init_parser_tests PRIVATE test_utilities)
+target_include_directories(init_parser_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 # Edge Case tests executable
 add_executable(edge_case_tests
     ${EDGE_CASE_TEST_SOURCES}
-    ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_link_libraries(edge_case_tests PRIVATE test_utilities)
+target_include_directories(edge_case_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 # C Basic AST tests executable
 add_executable(c_basic_ast_tests
     ${C_BASIC_AST_TEST_SOURCES}
-    ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_link_libraries(c_basic_ast_tests PRIVATE test_utilities)
+target_include_directories(c_basic_ast_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 # Python Basic AST tests executable
 add_executable(python_basic_ast_tests
     ${PYTHON_BASIC_AST_TEST_SOURCES}
-    ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_link_libraries(python_basic_ast_tests PRIVATE test_utilities)
+target_include_directories(python_basic_ast_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 # C++ Basic AST tests executable
 add_executable(cpp_basic_ast_tests
     ${CPP_BASIC_AST_TEST_SOURCES}
-    ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_link_libraries(cpp_basic_ast_tests PRIVATE test_utilities)
+target_include_directories(cpp_basic_ast_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 # Example AST test executables
 add_executable(c_example_ast_tests
     ${C_EXAMPLE_AST_TEST_SOURCES}
-    ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_link_libraries(c_example_ast_tests PRIVATE test_utilities)
+# Ensure correct include paths for all scopemux headers
+# This prevents missing header errors for scopemux/logging.h, etc.
+target_include_directories(c_example_ast_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+get_target_property(EXAMPLE_TESTS_INCLUDES c_example_ast_tests INCLUDE_DIRECTORIES)
+message(STATUS "[CMake Diagnostics] c_example_ast_tests include dirs: ${EXAMPLE_TESTS_INCLUDES}")
+
 
 add_executable(python_example_ast_tests
     ${PYTHON_EXAMPLE_AST_TEST_SOURCES}
     ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_include_directories(python_example_ast_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 add_executable(cpp_example_ast_tests
     ${CPP_EXAMPLE_AST_TEST_SOURCES}
     ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_include_directories(cpp_example_ast_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 # JavaScript and TypeScript test executables
 add_executable(js_basic_ast_tests
     ${JS_BASIC_AST_TEST_SOURCES}
-    ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_link_libraries(js_basic_ast_tests PRIVATE test_utilities)
+target_include_directories(js_basic_ast_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 add_executable(ts_basic_ast_tests
     ${TS_BASIC_AST_TEST_SOURCES}
-    ${TEST_UTIL_SOURCES}
     ${SCOPEMUX_CORE_C_SOURCES_FOR_TESTS}
 )
+target_link_libraries(ts_basic_ast_tests PRIVATE test_utilities)
+target_include_directories(ts_basic_ast_tests PRIVATE
+    ${PROJECT_SOURCE_DIR}/core/include
+    ${PROJECT_SOURCE_DIR}/core/include/scopemux
+)
+
 
 add_executable(js_example_ast_tests
     ${JS_EXAMPLE_AST_TEST_SOURCES}
@@ -245,7 +335,12 @@ target_link_libraries(cpp_basic_ast_tests PRIVATE
 )
 
 # Link Example AST tests
+# NOTE: Source files (including json_validation.c) should NEVER be directly
+# included in target_link_libraries. This previously caused duplicate symbol errors
+# since json_validation.c was already compiled into test_utilities.
+# Always link against the appropriate library instead.
 target_link_libraries(c_example_ast_tests PRIVATE
+    test_utilities # This already contains json_validation.c
     ${Criterion_LIBRARIES}
     parser_core
     m
