refactor the tree_sitter_integration.c file

--- a/.gitignore
+++ b/.gitignore
@@ -36,13 +36,16 @@ bindings/build/
 
 # Test executables and build artifacts
 core/tests/CMakeFiles/
-# Ignore all binaries in test directories (files without extensions)
-core/tests/*[!.][!.][!.]
-core/tests/*/*[!.][!.][!.]
-# Additionally catch specifically named test executables
+# Ignore all test binaries (no extension), but allow .c files like *_tests.c
 core/tests/*_tests
 core/tests/*_test
 core/tests/test_*
+!core/tests/*_tests.c
+!core/tests/*_test.c
+!core/tests/test_*.c
+!core/tests/*_tests.h
+!core/tests/*_test.h
+!core/tests/test_*.h
 
 # Executables
 *.exe
